@@ -1,5 +1,6 @@
 AUTHORS
 FAQ
+debian/README.debug
 debian/README.gnupg
 debian/README.gnupg-sc
 debian/README.keyctl
